--- a/src/pages/crisislogger/Home/style.scss
+++ b/src/pages/crisislogger/Home/style.scss
@@ -16,9 +16,11 @@
     img {
         width: 100%;
         height: auto;
+        min-height: 100%;
     }
     .button-container {
-        margin-top: 10px
+        margin-top: 10px;
+        text-align: center;
     }
     .title-text {
         text-align: center;
@@ -40,13 +42,17 @@
     }
 }
 
-@media screen and (max-device-width: 480px) {
+@media only screen and (max-width: 600px){
     .button-container {
         display: flex;
         flex-direction: column;
     }
     .login-link {
         margin-top: -35px;
-        margin-right: 0px;  
+        margin-right: 0px;
+    }
+    .home-page-container img {
+        width: 100%;
+        height: 130px;
     }
 }
